✨ fix mobile layout issues

--- a/src/components/About/About.module.scss
+++ b/src/components/About/About.module.scss
@@ -2,14 +2,14 @@
 
 .about {
   min-height: 100vh;
-  padding: $container-padding;
+  padding: 0;
   position: relative;
   overflow: hidden;
   background-color: $color-background;
-  width: 100%;
   display: flex;
   align-items: center;
-  justify-content: center;
+  scroll-margin-top: $header-height;
+
   &::before {
     content: '';
     position: absolute;
@@ -25,6 +25,8 @@
     position: relative;
     z-index: 1;
     max-width: $container-max-width;
+    margin: 0 auto;
+    padding: $container-padding;
     width: 100%;
 
     @media (max-width: $breakpoint-md) {
