--- a/src/components/Contact/Contact.module.scss
+++ b/src/components/Contact/Contact.module.scss
@@ -2,13 +2,12 @@
 
 .contact {
   min-height: 100vh;
-  padding: $container-padding;
+  padding: 0;
   position: relative;
   overflow: hidden;
   background-color: $color-background;
   display: flex;
   align-items: center;
-  justify-content: center;
   scroll-margin-top: $header-height;
 
   &::before {
@@ -26,6 +25,8 @@
     position: relative;
     z-index: 1;
     max-width: $container-max-width;
+    margin: 0 auto;
+    padding: $container-padding;
     width: 100%;
 
     @media (max-width: $breakpoint-md) {
