--- a/src/components/Profile/Profile.module.scss
+++ b/src/components/Profile/Profile.module.scss
@@ -58,6 +58,10 @@
     @media (max-width: $breakpoint-md) {
       font-size: $font-size-lg;
     }
+
+    @media (max-width: $breakpoint-lg) {
+      margin-top: $spacing-lg;
+    }
   }
   
   .highlight {
